# hackagames

./: .gitignore  BOARD.md  README.md  pyproject.toml
src/hackagames/bi421/: __init__.py  firstBot.py  shell.py
src/hackagames/connect4/: __init__.py  firstBot.py  grid.py  shell.py
src/hackagames/pandemic/: engine.py
src/hackagames/py421/: __init__.py  firstBot.py
src/hackagames/tictactoe/: __init__.py  engine.py  firstBot.py  grid.py  shell.py
tests/01-bi421/: test_bi421_02_gameSolo.py  test_bi421_03_gameDuo.py  test_bi421_10_firstBot.py  test_bi421_90_debugStories.py
tests/01-py421/: test_01_engine.py  test_02_gameSolo.py  test_03_gameDuo.py  test_04_firstBot.py  test_py421_02_gameSolo.py  test_py421_03_gameDuo.py  test_py421_10_firstBot.py  test_py421_90_debugStories.py
tests/02-connect4/: test_01_absGame.py  test_02_board.py  test_03_gameEngine.py  test_10_firstBot.py  test_c4_01_absGame.py  test_c4_02_board.py  test_c4_03_gameEngine.py  test_c4_04_boardTools.py  test_c4_05_shell.py  test_c4_10_firstBot.py  test_c4_90_debugStories.py
tests/03-tictactoe/: test_01_test.py  test_ttt_02_game.py  test_ttt_10_firstBot.py  test_ttt_90_debugStrories.py
