[build-system]
requires = ["flit_core >= 3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "hackagames"
version = "0.2.0"
authors = [
  { name="Guillaume Lozenguez", email="guillaume@drods.fr" },
]
description = "An Hackable Games' Engine (python version)"
dependencies = ["hacka"]
readme = "docs/pypip-index.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.flit.module]
name = "hackagames"

[project.scripts]
hacka-py421-play = "hackagames:py421.play"
hacka-py421-launch = "hackagames:py421.launch"
hacka-py421-connect = "hackagames:py421.connect"
hacka-py421-firstBot = "hackagames:py421.firstBot.connect"

[project.urls]
Homepage = "https://ktorz-net.github.io/hackagames"
